--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,8 @@
-<!doctype html>
 <html>
-  <head>
-    <title>{{.Title}}</title>
-  </head>
-  <body>
-    <h1>{{.Title}}</title>
-{{.Content}}
-  </body>
-</html>
+<head></head>
 
+<body>
+<h1>{{.Title}}</h1>
+{{.Content}}
+</body>
+</html>
