--- a/templates/body.html
+++ b/templates/body.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="span2"></div>
         <div class="span8">
+{{if .ShowError}}
+            <h3 style="text-align:center;color:red">{{.Error.Error}}</h3>
+{{end}}
             {{.Body}}
         </div>
         <div class="span2"></div>
