ALL HAIL WALLY, KING OF BOOTSTRAP

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,7 @@
         <div class="span2"></div>
         <div class="span8">
           <form action="/{{.Title}}" method="POST">
-          <textarea cols="256" rows="25" name="new_body">
+          <textarea class="span8" name="new_body">
 {{.Content}}
           </textarea><br>
           <input type="submit">
