--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,10 +2,9 @@
     <div class="row">
         <div class="span2"></div>
         <div class="span8">
+          <h1>
           <form action="/{{.Title}}" method="POST">
-          <textarea class="span8" rows="30" name="new_body">
-{{.Content}}
-          </textarea><br>
+          <textarea class="span8" rows="30" name="new_body">{{.Content}}</textarea><br>
           <input type="submit">
           </form>
         </div>
