update docs, tweak layout

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
     <a class="brand" href="/">GoWik</a>
     <form method="GET" class="navbar-form pull-left" style="margin:0 10px 0 0">
     <input type="hidden" name="mode" value="list">
-    <button type="submit" class="btn">List</button>
+    <button type="submit" class="btn">Pages</button>
     </form>
     <form method="GET" class="navbar-form pull-left" style="margin:0 10px 0 0">
     <input type="hidden" name="mode" value="edit">
@@ -19,7 +19,7 @@
     <input type="hidden" name="mode" value="delete">
     <button type="submit" class="btn">Delete</button>
     </form>
-    <form class="navbar-form pull-right" method="GET" action="/">
+    <form class="navbar-form pull-left" method="GET" action="/" style="margin:0 10px 0 0">
     <input type="hidden" name="mode" value="search">
     <input class="span2" type="text" placeholder="terms" name="terms">
     <button type="submit" class="btn">Search</button>
