--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
 {{end}}
     <form class="navbar-form pull-left" method="GET" action="/" style="margin:0 10px 0 0">
     <input type="hidden" name="mode" value="search">
-    <input class="span2" type="text" placeholder="terms" name="terms">
+    <input class="span2" type="text" placeholder="Search" name="terms">
     <button type="submit" class="btn">Search</button>
     </form>
 {{if .AuthRequired}}
